--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   google_maps_flutter: ^2.6.1
-  location: ^6.0.2
+  location: ^8.0.1
+  geolocator: ^11.0.0
+
 
 
 
@@ -48,7 +50,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
